# openapi/openapi.yaml
@@ -1027,7 +1027,9 @@ paths:
       - name: kind
         in: query
         schema:
-          $ref: "#/components/schemas/Kind"
+          type: array
+          items:
+            $ref: "#/components/schemas/Kind"
       - name: language
         in: query
         schema:
